SDK-395: For Java versions 11 and higher, SDK should run Tomcat with appropriate --add-opens flags (#358)
* SDK-395: For Java versions 11 and higher, SDK should run Tomcat with appropriate --add-opens flags

* SDK-395: Refactor isJava11OrHigher() method

---------

Co-authored-by: Juliet wamalwa <julietwamalwa@Juliets-MacBook-Air.local>